# Livflow-BE

./: .gitignore  README.md  db.sqlite3  docker-compose-dev.yml  docker-compose-pro.yml  dockerfile  dockerfile.base  dockerfilepro  nginx.conf  pyproject.toml
.github/workflows/: cicd.yml
django/: manage.py
django/costcalcul/: admin.py  apps.py  models.py  recipe_item_serializers.py  serializers.py  urls.py  utils.py  views.py
django/costcalcul/migrations/: 0001_initial.py
django/ingredients/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
django/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
django/ledger/: admin.py  models.py  serializers.py  urls.py  views.py
django/ledger/migrations/: 0001_initial.py
django/livflow/: asgi.py  settings.py  urls.py  wsgi.py
django/livflow/settings/: base.py  local.py  product.py
django/salesforecast/: urls.py  views.py
django/salesforecast/ai/: __init__.py  data_preprocessing.py  predict.py  train_model.py
django/store/: admin.py  models.py  serializers.py  urls.py  views.py
django/store/migrations/: 0001_initial.py  0002_transaction_store_alter_category_name_and_more.py
django/users/: admin.py  models.py  urls.py  utils.py
django/users/migrations/: 0001_initial.py
django/users/views/: google_auth_view.py  kakao_auth_view.py  naver_auth_view.py  user_auth_view.py
livflow/: asgi.py  pyproject.toml  settings.py  wsgi.py
