[tool.poetry]
name = "livflow"
version = "0.1.0"
description = "My Django Project"
authors = ["youngkwangjoo <dudrknd1642@gmail.com>"]
packages = [
    { include = "livflow", from = "django" },
    { include = "ledger", from = "django" },
    { include = "store", from = "django" },
    { include = "users", from = "django" },
    { include = "salesforecast", from = "django" },
    { include = "inventory", from = "django" },
    { include = "ingredients", from = "django" },
    { include = "costcalcul", from = "django" },
]


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-allauth = "^65.0.2"
requests = "^2.32.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.5.0"
django-cleanup = "^9.0.0"
cryptography = "^43.0.3"
psycopg2-binary = "^2.9.10"
gunicorn = "^20.1.0"
redis = "^5.2.1"
pillow = "^11.1.0"
numpy = "1.26.4"
scikit-learn = "^1.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
