[tool.poetry]
name = "livflow"
version = "0.1.0"
description = ""
authors = ["youngkwangjoo <dudrknd1642@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
